--- a/scripts/install
+++ b/scripts/install
@@ -29,7 +29,6 @@ path_url=$YNH_APP_ARG_PATH
 is_public=$YNH_APP_ARG_IS_PUBLIC
 master_key=$YNH_APP_ARG_MASTER_KEY
 data_path=$YNH_APP_ARG_DATA_PATH
-i_data_path=$YNH_APP_ARG_I_DATA_PATH
 
 app=$YNH_APP_INSTANCE_NAME
 
@@ -42,8 +41,7 @@ ynh_script_progression --message="Validating installation parameters..." --time 
 
 final_path=/var/www/$app
 
-if [ $i_data_path -ne 0 ]
-then
+if [ $data_path != "" ];then
     test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
 else
     test ! -e "$data_path" || mkdir "$data_path"
