--- a/scripts/install
+++ b/scripts/install
@@ -79,7 +79,7 @@ ynh_app_setting_set --app=$app --key=port --value=$port
 #=================================================
 
 ynh_script_progression --message="Installing mailisearch..." --time --weight=1
-installation_mailisearch()
+installation_mailisearch
 
 
 #=================================================
