--- a/scripts/install
+++ b/scripts/install
@@ -80,7 +80,19 @@ ynh_app_setting_set --app=$app --key=port --value=$port
 
 ynh_script_progression --message="Installing mailisearch..." --time --weight=1
 
-ynh_installation_mailisearch
+arch=$(ynh_detect_arch)
+url=""
+if [ $arch = "amd64" ]
+then
+    url="meilisearch-linux-amd64"
+elif [ $arch = "armv8"]
+    url="meilisearch-linux-armv8"
+else
+    ynh_die --message="Your OS Architecture is not supported"
+fi
+
+curl https://github.com/meilisearch/MeiliSearch/releases/download/$latest/mailisearch-linux-$arch -O mailisearch
+mv mailisearch /usr/bin/mailisearch
 
 
 #=================================================
