--- a/scripts/install
+++ b/scripts/install
@@ -87,7 +87,7 @@ then
     ynh_die --message="Your OS Architecture is not supported"
 fi
 
-curl https://github.com/meilisearch/MeiliSearch/releases/download/$latest/mailisearch-linux-$arch -O mailisearch
+curl https://github.com/meilisearch/MeiliSearch/releases/download/$latest/mailisearch-linux-$arch -o mailisearch
 mv mailisearch /usr/bin/mailisearch
 
 
