--- a/scripts/install
+++ b/scripts/install
@@ -114,8 +114,8 @@ ynh_system_user_create --username=$app
 #=================================================
 ynh_script_progression --message="Configuring a systemd service..." --time --weight=1
 
-ynh_replace_string "__PORT__" "$port" "conf/systemd.service"
-ynh_replace_string "__API_KEY__" "$master_key" "conf/systemd.service"
+ynh_replace_string "__PORT__" "$port" "../conf/systemd.service"
+ynh_replace_string "__API_KEY__" "$master_key" "../conf/systemd.service"
 
 # Create a dedicated systemd config
 ynh_add_systemd_config
