--- a/scripts/install
+++ b/scripts/install
@@ -43,10 +43,13 @@ final_path=/var/www/$app
 
 if [ $data_path != "" ];then
     test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
+    mkdir -p $final_path
 else
     test ! -e "$data_path" || mkdir "$data_path"
     final_path=$data_path
 fi
+
+
 
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
