--- a/scripts/install
+++ b/scripts/install
@@ -86,7 +86,7 @@ fi
 release_file=meilisearch-linux-$arch
 curl -OL https://github.com/meilisearch/MeiliSearch/releases/download/$latest/meilisearch-linux-$arch
 chmod +x "$release_file"
-mv "$release_file" /usr/bin/mailisearch
+mv "$release_file" /usr/bin/meilisearch
 
 
 #=================================================
