--- a/scripts/install
+++ b/scripts/install
@@ -72,10 +72,10 @@ port=$(ynh_find_port --port=8095)
 ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
-# DOWNLOAD AND INSTALL MAILISEARCH
+# DOWNLOAD AND INSTALL MEILISEARCH
 #=================================================
 
-ynh_script_progression --message="Installing mailisearch..." --time --weight=1
+ynh_script_progression --message="Installing meilisearch..." --time --weight=1
 
 arch=$(ynh_detect_arch)
 
