--- a/scripts/install
+++ b/scripts/install
@@ -65,7 +65,7 @@ ynh_app_setting_set --app=$app --key=allow_analyse --value=$allow_analyse
 # FIND AND OPEN A PORT
 #=================================================
 
-ynh_script_progression --message="Configuring firewall..." --weight=2
+ynh_script_progression --message="Finding an available port..." --weight=2
 
 # Find an available port
 port=$(ynh_find_port --port=8095)
