--- a/scripts/install
+++ b/scripts/install
@@ -71,6 +71,14 @@ port=$(ynh_find_port --port=8095)
 ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
+# CREATE DEDICATED USER
+#=================================================
+ynh_script_progression --message="Configuring system user..." --weight=1
+
+# Create a system user
+ynh_system_user_create --username=$app --home_dir="$final_path"
+
+#=================================================
 # DOWNLOAD AND INSTALL MEILISEARCH
 #=================================================
 ynh_script_progression --message="Installing Meilisearch..." --weight=5
@@ -86,6 +94,10 @@ curl -OL https://github.com/meilisearch/MeiliSearch/releases/download/$latest/me
 chmod +x "$release_file"
 mv "$release_file" /usr/bin/meilisearch
 
+chmod 750 "$final_path"
+chmod -R o-rwx "$final_path"
+chown -R $app:www-data "$final_path"
+
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
@@ -93,14 +105,6 @@ ynh_script_progression --message="Configuring NGINX web server..." --weight=8
 
 # Create a dedicated nginx config
 ynh_add_nginx_config
-
-#=================================================
-# CREATE DEDICATED USER
-#=================================================
-ynh_script_progression --message="Configuring system user..." --weight=1
-
-# Create a system user
-ynh_system_user_create --username=$app
 
 #=================================================
 # SETUP SYSTEMD
@@ -112,20 +116,9 @@ if [ $allow_analyse ]; then
 else
     ynh_replace_string "__ANALYTICS__" "true" "../conf/systemd.service"
 fi
-ynh_replace_string "__PORT__" "$port" "../conf/systemd.service"
-ynh_replace_string "__API_KEY__" "$master_key" "../conf/systemd.service"
 
 # Create a dedicated systemd config
 ynh_add_systemd_config
-
-#=================================================
-# GENERIC FINALIZATION
-#=================================================
-# SECURE FILES AND DIRECTORIES
-#=================================================
-
-# Set permissions to app files
-chown -R $app:$app $final_path
 
 #=================================================
 # SETUP LOGROTATE
@@ -148,14 +141,6 @@ ynh_script_progression --message="Starting a systemd service..." --weight=1
 
 # Start a systemd service
 ynh_systemd_action --service_name=$app --action="start" --log_path="/var/log/$app/$app.log"
-
-#=================================================
-# SETUP FAIL2BAN
-#=================================================
-#ynh_script_progression --message="Configuring fail2ban..." --time --weight=1
-#
-## Create a dedicated fail2ban config
-#ynh_add_fail2ban_config --logpath="/var/log/nginx/${domain}-error.log" --failregex="Regex to match into the log for a failed login"
 
 #=================================================
 # SETUP SSOWAT
