--- a/scripts/install
+++ b/scripts/install
@@ -90,7 +90,7 @@ then
     ynh_die --message="Your OS Architecture is not supported"
 fi
 release_file=meilisearch-linux-$arch
-curl -OL https://github.com/meilisearch/MeiliSearch/releases/download/$latest/meilisearch-linux-$arch
+curl -sOL https://github.com/meilisearch/MeiliSearch/releases/download/$latest/meilisearch-linux-$arch
 chmod +x "$release_file"
 mv "$release_file" /usr/bin/meilisearch
 
