--- a/scripts/install
+++ b/scripts/install
@@ -10,90 +10,17 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# MANAGE SCRIPT FAILURE
-#=================================================
-
-#REMOVEME? ynh_clean_setup () {
-	### Remove this function if there's nothing to clean before calling the remove script.
-	true
-}
-# Exit if an error occurs during the execution of the script
-#REMOVEME? ynh_abort_if_errors
-
-#=================================================
-# RETRIEVE ARGUMENTS FROM THE MANIFEST
-#=================================================
-
-#REMOVEME? domain=$YNH_APP_ARG_DOMAIN
-path="/"
-#REMOVEME? is_public=$YNH_APP_ARG_IS_PUBLIC
-#REMOVEME? master_key=$YNH_APP_ARG_MASTER_KEY
-#REMOVEME? allow_analyse=$YNH_APP_ARG_ALLOW_ANALYSE
-
-#REMOVEME? app=$YNH_APP_INSTANCE_NAME
-
-#=================================================
-# CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
-#=================================================
-#REMOVEME? ynh_script_progression --message="Validating installation parameters..." --weight=1
-
-#REMOVEME? install_dir=/var/www/$app
-
-#REMOVEME? test ! -e "$install_dir" || ynh_die --message="This path already contains a folder"
-mkdir -p $install_dir
-
-# Register (book) web path
-#REMOVEME? ynh_webpath_register --app=$app --domain=$domain --path=$path
-
-#=================================================
-# STORE SETTINGS FROM MANIFEST
-#=================================================
-#REMOVEME? ynh_script_progression --message="Storing installation settings..." --weight=1
-
-#REMOVEME? ynh_app_setting_set --app=$app --key=domain --value=$domain
-#REMOVEME? ynh_app_setting_set --app=$app --key=path --value=$path
-ynh_app_setting_set --app=$app --key=master_key --value=$master_key
-#REMOVEME? ynh_app_setting_set --app=$app --key=install_dir --value=$install_dir
-ynh_app_setting_set --app=$app --key=allow_analyse --value=$allow_analyse
-
-#=================================================
-# STANDARD MODIFICATIONS
-#=================================================
-# FIND AND OPEN A PORT
-#=================================================
-#REMOVEME? ynh_script_progression --message="Finding an available port..." --weight=2
-
-# Find an available port
-#REMOVEME? port=$(ynh_find_port --port=8095)
-#REMOVEME? ynh_app_setting_set --app=$app --key=port --value=$port
-
-#=================================================
-# CREATE DEDICATED USER
-#=================================================
-#REMOVEME? ynh_script_progression --message="Configuring system user..." --weight=1
-
-# Create a system user
-#REMOVEME? ynh_system_user_create --username=$app --home_dir="$install_dir"
-
-#=================================================
 # DOWNLOAD AND INSTALL MEILISEARCH
 #=================================================
-ynh_script_progression --message="Installing Meilisearch..." --weight=5
+ynh_script_progression --message="Setting up source files..." --weight=1
 
-arch=$(ynh_detect_arch)
-
-if [ "$arch" != "amd64" ] && [ "$arch" != "armv8" ]
-then
-    ynh_die --message="Your OS Architecture is not supported"
-fi
-release_file=meilisearch-linux-$arch
-curl -sOL https://github.com/meilisearch/MeiliSearch/releases/download/$latest/meilisearch-linux-$arch
-chmod +x "$release_file"
-mv "$release_file" /usr/bin/meilisearch
+# Download, check integrity, uncompress and patch the source from app.src
+ynh_setup_source --dest_dir="$install_dir"
 
 chmod 750 "$install_dir"
 chmod -R o-rwx "$install_dir"
 chown -R $app:www-data "$install_dir"
+chmod +x "$install_dir/meilisearch"
 
 #=================================================
 # NGINX CONFIGURATION
