--- a/scripts/install
+++ b/scripts/install
@@ -1,38 +1,51 @@
 #!/bin/bash
 
+#=================================================
+# IMPORT GENERIC HELPERS
+#=================================================
+
 source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# DOWNLOAD AND INSTALL MEILISEARCH
+# INITIALIZE AND STORE SETTINGS
+#=================================================
+
+key=$(ynh_string_random --length=16)
+ynh_app_setting_set --key=key --value=$key
+
+#=================================================
+# DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression "Setting up source files..."
 
+# Download, check integrity, uncompress and patch the source from manifest.toml
 ynh_setup_source --dest_dir="$install_dir"
 
 chmod +x "$install_dir/meilisearch"
 
 #=================================================
-# NGINX CONFIGURATION
+# APP INITIAL CONFIGURATION
 #=================================================
-ynh_script_progression "Configuring NGINX web server..."
-
-ynh_config_add_nginx
-
-ynh_config_add_systemd
-
-ynh_config_add_logrotate
-
-yunohost service add $app --description="Opensource next generation search API" --log="/var/log/$app/$app.log"
-
-#=================================================
-# ADD A CONFIGURATION
-#=================================================
-ynh_script_progression "Adding $app's configuration..."
-
-key=$(ynh_string_random --length=16)
+ynh_script_progression "Adding $app's configuration files..."
 
 ynh_config_add --template="config.toml" --destination="$install_dir/config.toml"
+
+#=================================================
+# SYSTEM CONFIGURATION
+#=================================================
+ynh_script_progression "Adding system configurations related to $app..."
+
+# Create a dedicated NGINX config using the conf/nginx.conf template
+ynh_config_add_nginx
+
+# Create a dedicated systemd config
+ynh_config_add_systemd
+yunohost service add "$app" --description="Opensource next generation search API" --log="/var/log/$app/$app.log"
+
+# Use logrotate to manage application logfile(s)
+ynh_config_add_logrotate
+
 
 #=================================================
 # START SYSTEMD SERVICE
@@ -40,10 +53,10 @@ ynh_config_add --template="config.toml" --destination="$install_dir/config.toml"
 ynh_script_progression "Starting $app's systemd service..."
 
 # Start a systemd service
-ynh_systemctl --service=$app --action="start"
+ynh_systemctl --service="$app" --action="start" --wait_until="starting in Actix runtime" --log_path="/var/log/$app/$app.log"
 
 #=================================================
 # END OF SCRIPT
 #=================================================
 
-ynh_script_progression "Installation of Meilisearch completed"
+ynh_script_progression "Installation of $app completed"
